# datorum

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  domain.cml
.github/workflows/: main.yml
.junie/: guidelines.md
PostgresWire/features/: example.feature
PostgresWire/features/MessageFlow/: ExtendedQuery.feature  SimpleQuery.feature  Startup.feature
PostgresWire/main/: Cargo.toml
PostgresWire/main/src/: main.rs
PostgresWire/main/tests/: cucumber.rs  example.rs  ssl_test.rs
PostgresWire/steps/: Cargo.toml
PostgresWire/steps/src/: lib.rs
QualityEngineering/features/: goose-in-cucumber.feature
QualityEngineering/main/: Cargo.toml
QualityEngineering/steps/: Cargo.toml
Server/main/: Cargo.toml  build.rs  test_dynamic_server.sh
Server/main/proto/: datorum.proto
Server/main/src/: avro_ex_doc.rs  defaults.rs  http3_client.rs  http3_server.rs  main.rs
Server/main/tests/: http3_e2e_tests.rs
Server/stg/: Cargo.toml
Server/stg/src/: avro_example.rs  main.rs
contextmapper/: .gitignore  Makefile  README.md  settings.gradle  testing.cml
contextmapper/app/: build.gradle
contextmapper/app/src/main/java/ll.ddd/: App.java
contextmapper/app/src/test/java/ll/ddd/: AppTest.java
engine/: build.gradle
engine/specs-java/io/beandev/datorum/: CreatePostgres.java
engine/specs-java/steps/schema/: DatabaseDefinitionSteps.java
engine/specs/schema/: metadata.feature
engine/src/main/java/io/beandev/datorum/schema/jdbc/: JdbcSchemaRepository.java
postgres/: Cargo.toml
postgres/src/: main.rs
postgres/tests/: cucumber.rs  ssl_test.rs
scripts/: generatecontextmap.sh  validate.sh
