[package]
name = "datorum-postgres-wire"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.35.0", features = ["column_decltype"] }
pgwire = "0.29.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.12"
bytes = "1.4.0"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
rustls = "0.21.0"
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.0"
webpki-roots = "0.25.0"
rustls-pki-types = "1.12.0"

[dev-dependencies]
cucumber = { path = "../../QualityEngineering/cucumber-rs" }
datorum-postgres-wire-steps = { path = "../steps" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "example" # this should be the same as the filename of your test target

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false
