[package]
name = "datorum-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
pgwire = "0.29.1"
# tonic = "0.12"
# prost = "0.13" # prost is a dependency of tonic, but we need to specify it here to use the derive feature

tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
# Avro serialization with derive macro (derive enabled even if we use manual schema now)
apache-avro = { version = "0.20.0", features = ["derive"] }
once_cell = "1.19"

[build-dependencies]
# tonic-build = "0.12"
# https://doc.rust-lang.org/cargo/reference/manifest.html