[package]
name = "datorum-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "datorum_server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
pgwire = "0.29.1"

tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
apache-avro = { version = "0.17", features = ["derive"] }
once_cell = "1.19"
# QUIC stack (HTTP/3 with compatible versions)
quinn = "0.10"
rcgen = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1"
# HTTP/3 dependencies - using compatible versions
h3 = "0.0.3"
h3-quinn = "0.0.4"
http = "0.2"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
