[package]
name = "datorum-server-stg"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
pgwire = "0.29.1"

tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
apache-avro = { version = "0.17", features = ["derive"] }
# QUIC stack (HTTP/3 with compatible versions)
quinn = { version = "0.11.9", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
rcgen = "0.13"
anyhow = "1"

rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-native-certs = "0.8"
structopt = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1"
# HTTP/3 dependencies - using compatible versions
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.3.1"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
